@@ -1,5 +1,7 @@
 package com.joshlong.mogul.api.mogul;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.simple.JdbcClient;
@@ -7,40 +9,46 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionTemplate;
 import org.springframework.util.Assert;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 @Service
-@Transactional
 class DefaultMogulService implements MogulService {
 
-	//
-	private final static String PODBEAN_ACCOUNTS_SETTINGS = "podbean";
+	private final Map<String, Mogul> mogulsByName = new ConcurrentHashMap<>();
 
-	private final static String PODBEAN_ACCOUNTS_SETTINGS_CLIENT_ID = "client-id";
+	private final Map<Long, Mogul> mogulsById = new ConcurrentHashMap<>();
 
-	private final static String PODBEAN_ACCOUNTS_SETTINGS_CLIENT_SECRET = "client-secret";
+	private final Logger log = LoggerFactory.getLogger(getClass());
+
+	private final TransactionTemplate tt;
 
 	private final JdbcClient db;
-
-	private final TransactionTemplate transactionTemplate;
 
 	private final ApplicationEventPublisher publisher;
 
 	private final MogulRowMapper mogulRowMapper = new MogulRowMapper();
 
-	DefaultMogulService(JdbcClient jdbcClient, TransactionTemplate transactionTemplate,
-			ApplicationEventPublisher publisher) {
+	DefaultMogulService(JdbcClient jdbcClient, TransactionTemplate tt, ApplicationEventPublisher publisher) {
 		this.db = jdbcClient;
-		this.transactionTemplate = transactionTemplate;
 		this.publisher = publisher;
+		this.tt = tt;
 		Assert.notNull(this.db, "the db is null");
-		Assert.notNull(this.transactionTemplate, "the transactionTemplate is null");
+		try (var scheduledExecutorService = Executors.newScheduledThreadPool(1);) {
+			scheduledExecutorService.scheduleAtFixedRate(() -> {
+				mogulsById.clear();
+				mogulsByName.clear();
+				log.debug("mogul cache eviction...");
+			}, 1, 5, TimeUnit.MINUTES);
+		}
 	}
 
 	@Override
@@ -52,43 +60,67 @@ class DefaultMogulService implements MogulService {
 	@Override
 	public Mogul login(Authentication principal) {
 		var principalName = principal.getName();
-		var exists = getMogulByName(principalName) != null;
-		var sql = """
-				insert into mogul(username,  client_id) values (?, ?)
-				on conflict on constraint mogul_client_id_username_key do nothing
-				""";
-		if (principal.getPrincipal() instanceof Jwt jwt && jwt.getClaims().get("aud") instanceof List list
-				&& list.get(0) instanceof String aud) {
-			this.db.sql(sql).params(principalName, aud).update();
+		var mogulByName = (Mogul) null;
+		if ((mogulByName = this.getMogulByName(principalName)) == null) {
+			if (principal.getPrincipal() instanceof Jwt jwt && jwt.getClaims().get("aud") instanceof List list
+					&& list.getFirst() instanceof String aud) {
+				var sql = """
+						insert into mogul(username,  client_id) values (?, ?)
+						on conflict on constraint mogul_client_id_username_key do nothing
+						""";
+				this.db.sql(sql).params(principalName, aud).update();
+			}
+			mogulByName = this.getMogulByName(principalName);
+			this.publisher.publishEvent(new MogulCreatedEvent(mogulByName));
 		}
-		var mogul = this.getMogulByName(principalName);
-		if (!exists) {
-			publisher.publishEvent(new MogulCreatedEvent(mogul));
-		}
-		return mogul;
+
+		this.publisher.publishEvent(new MogulAuthenticatedEvent(mogulByName));
+		// todo publish some sort of MogulAuthenticatedEvent so that we can use that as a
+		// cue in the PodcastService to load the
+		// particular mogul's data into memory.
+		return mogulByName;
 	}
 
 	@Override
 	public Mogul getMogulById(Long id) {
-		return this.db.sql("select * from mogul where id =? ").param(id).query(this.mogulRowMapper).single();
+		var msg = new StringBuilder();
+		msg.append("trying to resolve mogul by id " + id + "");
+		var res = this.mogulsById.computeIfAbsent(id, mogulId -> {
+			var mogul = this.db.sql("select * from mogul where id =? ").param(id).query(this.mogulRowMapper).single();
+			msg.append(", cache missed, resolving by db query [").append(mogulId).append("]");
+			return mogul;
+		});
+		if (log.isDebugEnabled()) {
+			log.debug(msg.toString());
+		}
+		return res;
 	}
 
 	@Override
 	public Mogul getMogulByName(String name) {
-		var moguls = this.db//
-			.sql("select * from mogul where  username  = ? ")
-			.param(name)
-			.query(this.mogulRowMapper)
-			.list();
-		Assert.state(moguls.size() <= 1, "there should only be one mogul with this username [" + name + "]");
-		return moguls.isEmpty() ? null : moguls.getFirst();
+		var msg = new StringBuilder();
+		msg.append("trying to resolve mogul by name [").append(name).append("]");
+		var res = this.mogulsByName.computeIfAbsent(name, key -> {
+			var moguls = this.db//
+				.sql("select * from mogul where  username = ? ")
+				.param(key)
+				.query(this.mogulRowMapper)
+				.list();
+			Assert.state(moguls.size() <= 1, "there should only be one mogul with this username [" + name + "]");
+			var mogul = moguls.isEmpty() ? null : moguls.getFirst();
+			msg.append(", but had to hit the DB to find a mogul by name [").append(name).append("]");
+			return mogul;
+		});
+		if (log.isDebugEnabled())
+			log.debug(msg.toString());
+		return res;
 	}
 
 	@Override
-	public void assertAuthorizedMogul(Long aLong) {
-		var currentlyAuthenticated = getCurrentMogul();
-		Assert.state(currentlyAuthenticated != null && currentlyAuthenticated.id().equals(aLong),
-				"the requested mogul [" + aLong + "] is not currently authenticated");
+	public void assertAuthorizedMogul(Long mogulId) {
+		var currentlyAuthenticated = this.getCurrentMogul();
+		Assert.state(currentlyAuthenticated != null && currentlyAuthenticated.id().equals(mogulId),
+				"the requested mogul [" + mogulId + "] is not currently authenticated");
 	}
 
 	static class MogulRowMapper implements RowMapper<Mogul> {
